--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,4 +43,19 @@
         android:gravity="center"
         android:text="Not Registered Yet , Sign Up !"
         android:textSize="18sp" />
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/gSignInBtn"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:iconTint="@null"
+        android:backgroundTint="@color/white"
+        android:layout_marginTop="8dp"
+        android:text="Sign In"
+        android:textColor="@color/black"
+        app:iconSize="20dp"
+        app:icon="@drawable/googlelogo"
+         />
 </LinearLayout>
