--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -16,80 +16,69 @@
     android:background="@color/darkGrey"
     tools:context=".DetailActivity">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-
-        android:layout_marginTop="-10dp"
-        android:layout_marginBottom="20dp"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="5dp"
-        app:cardUseCompatPadding="true">
-
-    <ImageView
         android:id="@+id/imgRecipe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:scaleType="centerCrop"
+        app:layout_collapseMode="parallax"
         android:src="@drawable/biceps"
-    />
-
-    </androidx.cardview.widget.CardView>
+        app:layout_collapseParallaxMultiplier="0.7"
+        app:riv_corner_radius_bottom_right="30dp"
+        app:riv_corner_radius_bottom_left="30dp"/>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="20dp"
+        android:layout_marginRight="10dp"
+        android:gravity="end"
         android:orientation="horizontal">
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+
+        <com.makeramen.roundedimageview.RoundedImageView
+
+            android:layout_marginHorizontal="10dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="start"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="-10dp"
-            android:layout_marginBottom="50dp"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="5dp"
-            app:cardUseCompatPadding="true">
+            android:id="@+id/imgFavorite"
+            android:scaleType="fitCenter"
+            app:riv_border_width="0dp"
+            app:riv_border_color="@color/lightGreen"
+            android:src="@drawable/ic_favorite"
+            app:riv_corner_radius="10dp" />
 
-            <ImageView
-                android:id="@+id/imgFavorite"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:src="@drawable/ic_favorite"
-                app:tint="@color/lightGreen" />
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:layout_marginHorizontal="10dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
 
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            app:cardCornerRadius="10dp"
-            android:layout_marginBottom="50dp"
-            app:cardElevation="0dp"
-            app:cardUseCompatPadding="true">
-            <ImageView
-                android:id="@+id/imgYoutube"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:src="@drawable/ic_play"
-                app:tint="@color/lightGreen" />
+            android:id="@+id/imgYoutube"
+            android:scaleType="fitCenter"
+            app:riv_border_width="0dp"
+            app:riv_border_color="@color/lightGreen"
+            android:src="@drawable/ic_play"
+            app:riv_corner_radius="10dp" />
 
-
-        </androidx.cardview.widget.CardView>
-
-
-
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:layout_marginHorizontal="10dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/imgshare"
+            android:scaleType="centerCrop"
+            app:riv_mutate_background="true"
+            app:riv_border_width="0dp"
+            app:riv_border_color="@color/lightGreen"
+            android:src="@drawable/ic_share_green"
+            app:riv_corner_radius="10dp" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/tvMealname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-30dp"
+        android:layout_marginTop="-10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:maxLines="1"
