--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Videfrigo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Videfrigo" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -22,4 +22,13 @@
         <item name="android:textSize">16sp</item>
         <item name="tint">@android:color/black</item>
     </style>
+
+    <style name="Theme.Videfrigo.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Videfrigo.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Videfrigo.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
