--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/darkGrey"
     tools:context=".ResetPasswordActivity">
 
     <LinearLayout
@@ -11,6 +12,8 @@
         android:layout_height="729dp"
         android:paddingBottom="200dp"
         android:gravity="center"
+
+
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -20,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Reset Password"
+            android:textColor="@color/lightGreen"
             android:textSize="20sp"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="173dp"
@@ -34,15 +38,20 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:minHeight="48dp"
+            android:background="@drawable/bg_search"
             android:hint=" Email"
+            android:theme="@style/SearchView"
             tools:layout_editor_absoluteX="100dp"
             tools:layout_editor_absoluteY="147dp"
             android:autofillHints="" />
 
         <Button
             android:id="@+id/buttonResetPass"
+            android:background="@drawable/bg_search"
+            android:backgroundTint="@color/lightGrey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="RESET"
             tools:layout_editor_absoluteX="158dp"
             tools:layout_editor_absoluteY="206dp" />
