--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -1,55 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:background="@color/darkGrey"
+    android:theme="@style/SearchView"
+    >
 
-    <TextView
+    <EditText
         android:id="@+id/textEditInfo"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Edit Info"
-        android:textColor="@color/black"
-        android:textStyle="bold"
+        android:hint="Edit Info"
+        android:textSize="25sp"
         android:gravity="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+        android:theme="@style/SearchView"/>
 
     <EditText
         android:id="@+id/editName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Name"
-        android:textSize="20sp"/>
+        android:background="@drawable/bg_search"
+        android:hint=" Name"
+        android:padding="5dp"
+        android:textSize="25sp" />
 
     <EditText
         android:id="@+id/editAge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Age"
+        android:hint=" Age"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/bg_search"
+        android:padding="5dp"
         android:inputType="number"
-        android:textSize="20sp"/>
+        android:textSize="25sp"
+        />
 
 
     <EditText
         android:id="@+id/editAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Address"
-        android:textSize="20sp"/>
-
-    <Button
-        android:id="@+id/buttonCancel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:hint=" Address"
         android:layout_marginTop="8dp"
-        android:text="Cancel"
-        android:backgroundTint="@color/teal_200"/>
+        android:textSize="25sp"
+        android:background="@drawable/bg_search"
+        android:padding="5dp"
 
-    <Button
-        android:id="@+id/buttonEditInfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Edit"
-        android:backgroundTint="@color/teal_200"/>
+      />
+
+
+        <Button
+            android:id="@+id/buttonCancel"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginTop="8dp"
+            android:text="Cancel"
+            app:cornerRadius="20dp"
+            android:backgroundTint="@color/purple_500"
+            android:textColor="@android:color/white"
+
+            />
+
+        <Button
+            android:id="@+id/buttonEditInfo"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:text="Edit"
+            app:cornerRadius="20dp"
+            android:backgroundTint="@color/purple_500"
+            android:textColor="@android:color/white" />
+
+
+
 </LinearLayout>
