--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,13 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+
+    <style name="SearchView" parent="">
+        <item name="android:editTextColor">@android:color/black</item>
+        <item name="android:textColorHint">@color/lightBleu</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="tint">@android:color/black</item>
+    </style>
 </resources>
