changed Sign up design

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightBleu"
+    android:background="@color/darkGrey"
     tools:context=".SignUpActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/nameLayout"
-
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
+        android:theme="@style/SearchView"
         app:boxStrokeColor="@color/lightGreen"
         app:hintTextColor="@color/lightGreen"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,6 +27,7 @@
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/bg_search"
             android:hint="Type your Name"
             android:inputType="textPersonName"
             android:textSize="20sp" />
@@ -33,7 +35,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ageLayout"
-
+        android:theme="@style/SearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
@@ -43,7 +45,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameLayout">
+        app:layout_constraintTop_toBottomOf="@+id/nameLayout"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ageET"
@@ -52,13 +55,14 @@
             android:layout_height="wrap_content"
             android:hint="Type your Age"
             android:inputType="number"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:background="@drawable/bg_search"/>
     </com.google.android.material.textfield.TextInputLayout>
 
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/addressLayout"
-
+        android:theme="@style/SearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
@@ -72,7 +76,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/addressET"
-
+            android:background="@drawable/bg_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Type your Address"
@@ -83,10 +87,12 @@
 
     <EditText
         android:id="@+id/emailEt"
-        android:hint="Type your Email"
+        android:theme="@style/SearchView"
+        android:background="@drawable/bg_search"
+        android:hint="    Type your Email"
         android:textSize="20sp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +107,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/passwordLayout"
-
+        android:theme="@style/SearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
@@ -116,7 +122,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passET"
-
+            android:background="@drawable/bg_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Type Your Password"
@@ -126,7 +132,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/confirmPasswordLayout"
-
+        android:theme="@style/SearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
@@ -141,7 +147,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/confirmPassEt"
-
+            android:background="@drawable/bg_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Retype Your Password"
@@ -152,13 +158,14 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonSignUp"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="20dp"
-        android:background="@color/lightGreen"
+        android:background="@drawable/bg_search"
+        android:backgroundTint="@color/purple_500"
         android:gravity="center"
         android:text="Sign Up"
-        android:textColor="@color/black"
+    android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -173,7 +180,7 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="Already Registered , Sign In !"
-        android:textColor="@color/black"
+        android:textColor="@color/lightGreen"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
